name:                gtk-hello
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gtk-hello
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
                     -- gtk2hs
                     -- , cairo
                     -- , gio
                     -- , glade
                     -- , glib
                     , gtk
                     -- , gtkglext
                     -- , gtksourceview2
                     -- misc
                     , file-embed
                     , utf8-string
